--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2022",
     "module": "esnext",
+    "moduleResolution": "node",
     "outDir": "dist",
     "declaration": true,
     "rootDir": "src",
