--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,3 +1,9 @@
 {
-  "name": "@mx/common"
+  "name": "@mx/common",
+  "devDependencies": {
+    "@types/node": "^22.7.4",
+    "release-it": "^17.7.0",
+    "tsup": "^8.3.0",
+    "typescript": "^5.4.2"
+  }
 }
