--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.node.json",
+  "compilerOptions": {
+    "rootDir": "./"
+  },
+  "exclude": ["dist"],
+  "include": ["lib"]
 }
