--- a/playgrounds/lab/package.json
+++ b/playgrounds/lab/package.json
@@ -2,11 +2,17 @@
   "name": "@mx-ply/lab",
   "scripts": {
     "dev": "tsx --watch src/main.ts",
-    "start": "tsx src/main.ts"
+    "start": "tsx src/main.ts",
+    "test": "tsx src/test.ts",
+    "test2": "tsx src/test2.ts"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
+    "@types/path-to-regexp": "^1.7.0",
     "tsx": "^4.19.1",
     "typescript": "^5.4.2"
+  },
+  "dependencies": {
+    "path-to-regexp": "^8.2.0"
   }
 }
