feat(benchmark): add directory for performance tests
- Create a benchmark directory for performance testing.
- Add scripts for autocannon, wrk, and k6 benchmarks.
- Include documentation on how to run tests and save results.
- Provide example output files for reference.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
 # Automatically normalize line endings
 * text=auto
 
+# Custom
+**/k6/*.k6.json binary
+
 # Treat package-manager's lock file as a binary file
 package-lock.json binary
 yarn.lock binary
