fix(k6): removed k6 result jsons

--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -8,8 +8,8 @@
     "autocannon": "run-s test:express test:mxjs",
     "k6": "run-s k6:express k6:mxjs",
     "wrk": "run-s wrk:express wrk:mxjs",
-    "k6:express": "k6 run src/k6/k6-express.mjs --out json=src/k6/express.k6.json",
-    "k6:mxjs": "k6 run src/k6/k6-mxjs.mjs --out json=src/k6/mxjs.k6.json",
+    "k6:express": "k6 run src/k6/k6-express.mjs",
+    "k6:mxjs": "k6 run src/k6/k6-mxjs.mjs",
     "wrk:express": "wrk -t8 -c400 -d10s http://127.0.0.1:3991 > wrk-express.txt",
     "wrk:mxjs": "wrk -t8 -c400 -d10s http://127.0.0.1:3992 > wrk-mxjs.txt",
     "start:express": "node src/express",
