--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -10,13 +10,13 @@
     "wrk": "run-s wrk:express wrk:mxjs",
     "k6:express": "k6 run src/k6/k6-express.mjs",
     "k6:mxjs": "k6 run src/k6/k6-mxjs.mjs",
-    "wrk:express": "wrk -t8 -c400 -d10s http://127.0.0.1:3991 > wrk-express.txt",
-    "wrk:mxjs": "wrk -t8 -c400 -d10s http://127.0.0.1:3992 > wrk-mxjs.txt",
+    "wrk:express": "wrk -t8 -c2500 -d60s http://127.0.0.1:3991 > wrk-express.txt",
+    "wrk:mxjs": "wrk -t8 -c2500 -d60s http://127.0.0.1:3992 > wrk-mxjs.txt",
     "start:express": "node src/express",
     "start:mxjs": "tsx src/mxjs.ts",
     "start": "run-p \"start:express\" \"start:mxjs\"",
-    "test:express": "autocannon -d 60 -c 10000 http://127.0.0.1:3991 && echo '\n\tExpress.js benchmark done\n\n'",
-    "test:mxjs": "autocannon -d 60 -c 10000 http://127.0.0.1:3992 && echo '\n\tMx.js benchmark done\n\n'"
+    "test:express": "autocannon -d 30 -c 10000 http://127.0.0.1:3991",
+    "test:mxjs": "autocannon -d 30 -c 10000 http://127.0.0.1:3992"
   },
   "keywords": [
     "benchmark",
